Alerts are back in the base template.

--- a/notifico/templates/base/body.html
+++ b/notifico/templates/base/body.html
@@ -86,7 +86,9 @@ active
         </div>
     </div>
 
-    {%- block pre_content -%}{%- endblock %}
+    {%- block pre_content -%}
+        {{ alerts() }}
+    {%- endblock %}
     {%- block content -%}{%- endblock -%}
     {%- block post_content -%}{%- endblock %}
 
