--- a/notifico/static/css/less/custom.less
+++ b/notifico/static/css/less/custom.less
@@ -69,6 +69,7 @@ input[type="color"],
       box-shadow: none;
       color: @textColor;
       text-shadow: none;
+      font-weight: 300;
 
       &:hover {
         color: @textHoverColor;
